# libocr

./: .gitignore  CMakeLists.txt  README.md  README_CH.md
.github/workflows/: cmake.yml
cmake/: find_deps.cmake  find_onnxruntime.cmake  find_opencv.cmake
include/: libocr.h
include/libocr/: libocr.h
lib/: libocr.lib
resource/: model_det.onnx  resource_model.rc  resource_version.rc.in  version_hash.hash
source/: CMakeLists.txt  libocr.cpp  libocr.def
source/ocr/: ocr.cpp
source/ocr_manager/: ocr_manager.cpp  ocr_manager.h
source/onnx/: onnx.h
source/onnx/text_detector/: text_detector.cpp  text_detector.h
source/onnx/text_recognizer/: text_recognizer.cpp  text_recognizer.h
src/: libocr.cpp
src/ocr/: ocr.cpp  ocr.h
src/ocr_manager/: ocr_manager.cpp  ocr_manager.h
src/onnx/: onnx.h
src/onnx/text_detector/: text_detector.cpp  text_detector.h
src/onnx/text_recognizer/: text_recognizer.cpp  text_recognizer.h
src/resource/: resource.h
src/utils/: include.h  utils.h
test/: CMakeLists.txt  unit_test.cpp
test/example_dynamiclink_loadtime/: CMakeLists.txt  example_dynamiclink_loadtime.cpp
test/example_dynamiclink_runtime/: CMakeLists.txt  example_dynamiclink_runtime.cpp
